small bug where items could be cut off on odd-shaped screens (iPad with stage manager)

--- a/hotel/src/app/main.css
+++ b/hotel/src/app/main.css
@@ -127,7 +127,7 @@
         top: 0;
         left: 0;
         right: 0;
-        overflow: hidden;
+        overflow: scroll;
         animation: slide-in 0.375s ease-in-out;
       }
 
@@ -140,7 +140,7 @@
         top: 0;
         left: 0;
         right: 0;
-        overflow: hidden;
+        overflow: scroll;
         animation: slide-out 0.375s ease-in-out;
       }
 
